--- a/index.html
+++ b/index.html
@@ -143,11 +143,12 @@
                         <strong>45 likes</strong>
                     </p>
                     <p>This is my first photo of the feed. This is a multi line comment for testing purposes. I am learning to code with <strong>#BreatheCode</strong> - Alfonso Mendez</p>
+                    <div class="form-floating">
                     <p class="comment-bar">
-                        <i class="fa-solid fa-heart p-2"></i> Comment... 
-                        <span class="dots"><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                        <i class="fa-solid fa-heart p-2"></i><span class="dots"><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                            <textarea class="form-control" placeholder="Comment..." id="floatingTextarea2"></textarea>
                     </p>
-                    
+                    </div>  
                 </div>
             </div>
         </div>
@@ -168,10 +169,12 @@
                         <strong>79 likes</strong>
                     </p>
                     <p>The Warning, the famous all-women rock band will be starting their Tour this month, it will be called the 'Mayday Tour' and we're really excited! Click here to buy tickets: <a href="https://www.thewarningband.com/tour" target="blank">Mayday Tour 2022</a>. You have been Warned!</p>
-                    <p class="comment-bar">
-                        <i class="fa-solid fa-heart p-2"></i> Comment... 
-                        <span class="dots"><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                    </p>
+                    <div class="form-floating">
+                        <p class="comment-bar">
+                            <i class="fa-solid fa-heart p-2"></i><span class="dots"><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                                <textarea class="form-control" placeholder="Comment..." id="floatingTextarea2"></textarea>
+                        </p>
+                    </div> 
                 </div>
             </div>
         </div>
@@ -192,10 +195,12 @@
                         <strong>38 likes</strong>
                     </p>
                     <p>With the summer coming up everyone's looking for a place to visit and relax, well, Delray Beach is the perfect destination! Delray Beach is a small city on Florida's southeast coast with an incredible beach perfect for spending some quality time, visit now! Directions: <a href="https://www.google.com/maps/dir//Delray+Beach,+FL/@26.4560036,-80.1271934,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x88d8dffc90ec6ae3:0xc7780128536eb8b8!2m2!1d-80.0728201!2d26.4614625" target="blank">Delray Beach</a></p>
-                    <p class="comment-bar">
-                        <i class="fa-solid fa-heart p-2"></i> Comment... 
-                        <span class="dots"><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                    </p>
+                    <div class="form-floating">
+                        <p class="comment-bar">
+                            <i class="fa-solid fa-heart p-2"></i><span class="dots"><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                                <textarea class="form-control" placeholder="Comment..." id="floatingTextarea2"></textarea>
+                        </p>
+                    </div> 
                 </div>
             </div>
         </div>
@@ -216,10 +221,12 @@
                         <strong>999 likes</strong>
                     </p>
                     <p>Today marks the 3 year anniversary of Juice WRLD's last project in life titled Death Race for Love. It revolutionized the hip-hop and rap scene to add more melodic and emotional aspects to it; Today we celebrate once more his life and impact in music. Listen to Juice Wrld here: <a href="https://open.spotify.com/artist/4MCBfE4596Uoi2O4DtmEMz" target="blank">Juice WRLD</a></p>
-                    <p class="comment-bar">
-                        <i class="fa-solid fa-heart p-2"></i> Comment... 
-                        <span class="dots"><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                    </p>
+                    <div class="form-floating">
+                        <p class="comment-bar">
+                            <i class="fa-solid fa-heart p-2"></i><span class="dots"><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                                <textarea class="form-control" placeholder="Comment..." id="floatingTextarea2"></textarea>
+                        </p>
+                    </div> 
                 </div>
             </div>
         </div>
@@ -240,10 +247,12 @@
                         <strong>54 likes</strong>
                     </p>
                     <p>This week Real Madrid faces Paris Saint-Germain in the round of 16 of the UEFA Champions League, what a match! Who will go through the next stage? We will know soon.</p>
-                    <p class="comment-bar">
-                        <i class="fa-solid fa-heart p-2"></i> Comment... 
-                        <span class="dots"><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                    </p>
+                    <div class="form-floating">
+                        <p class="comment-bar">
+                            <i class="fa-solid fa-heart p-2"></i><span class="dots"><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                                <textarea class="form-control" placeholder="Comment..." id="floatingTextarea2"></textarea>
+                        </p>
+                    </div> 
                 </div>
             </div>
         </div>
